@@ -1,0 +1,5 @@
+foo;12;aaa
+bar;42
+baz;;bbb
+ ;;ccc
+36
