@@ -1,3 +1,7 @@
+2017-11-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Fixed functional tests for TYPO3 CMS 8
+
 2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Released version 2.1.0
